--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Lemopo
 email: zlipeng00@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A JavaScript Coder !
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://lemopo.cc" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lemopo_
 github_username:  zlipeng
