--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,12 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+
+defaults:
+  -
+    scope:
+      path: "" # 一个空的字符串代表项目中所有的文件
+      type: "posts"
+    values:
+      layout: "post"
+      author: "Lemopo"
